refactor: use Java 16 syntax for lists